QA-4929: updated version of spring, spring.security, spring.boot, hibernate; updated orm.xml; changed queries; clean code